2003-10-17  Don Allingham  <dallingham@users.sourceforge.net>
	* src/RelLib.py: Add a "sortbynames" to presort keys before adding to
	the tables
	* src/PeopleView.py: Presort names before adding, delay enabling of
	autosorting until data has been added
	* src/PeopleStore.py: Add enable sort task

2003-10-16  Don Allingham  <dallingham@users.sourceforge.net>
	* src/FamilyView.py: fixed paths to redisplay_person_list
	* src/ListModel.py: convert indices to strings. Sometimes a object just
	doesn't work as a dictionary key
	* src/PeopleStore.py: modify status bar, unroll loop while adding values

2003-10-16  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/GrampsCfg.py: Implement instant preferences (HIG).
	* src/preferences.glade: Likewise.
	* src/gramps_main.py (pref_callback): Update statusbar from prefs
	(needed for Family View). Enable switching Toolbar on/off.
	* NEWS: Instant prefs.
	* src/FamilyView.py (set_widgets): Do not connect buttons if this 
	view is already initialized.
	* src/GrampsCfg.py: Set GNOME toolbar prefs as the default. 
	Correct existing gconf key detection. Enable switching Toolbar on/off.
	* src/gramps.glade: Enable switching Toolbar on/off. 

2003-10-15  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps.glade: Correct tooltips. 
	* src/GrampsCfg.py:	Enable using four toolbar styles as well as 
	the gnome default style.
	* src/preferences.glade: Add a title for the tree. HIGify toolbar styles. 
	* src/gramps_main.py (pref_callback): Set toolbar style from prefs.

2003-10-15  Tim Waugh  <twaugh@redhat.com>
	* src/Makefile.am: Add uninstall rule for grampslib.so (now 'make
	distcheck' passes again).

2003-10-14  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/ListModel.py (find): Prevent traceback if the entry is not found.

2003-10-14  Don Allingham  <dallingham@users.sourceforge.net>
	* src/data/templates/Makefile.am: install blue_edge.tpkg
	* src/docgen/HtmlDoc.py: report error correctly on missing
	template
