@@ -18,6 +18,8 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
+# $Id$
+
 #-------------------------------------------------------------------------
 #
 # standard python modules
@@ -120,7 +122,35 @@ class SourceView:
             source = self.db.getSource(id)
             EditSource.EditSource(source,self.db,self.topWindow,self.update_display)
             return 1
+        elif event.type == gtk.gdk.BUTTON_PRESS and event.button == 3:
+            self.build_context_menu()
+            return 1
         return 0
+
+    def build_context_menu(self):
+        """Builds the menu with editing operations on the source's list"""
+        
+        store,iter = self.selection.get_selected()
+        if iter:
+            sel_sensitivity = 1
+        else:
+            sel_sensitivity = 0
+        entries = [
+            (gtk.STOCK_ADD, self.on_add_clicked,1),
+            (gtk.STOCK_REMOVE, self.on_delete_clicked,sel_sensitivity),
+            (_("Edit"), self.on_edit_clicked,sel_sensitivity),
+        ]
+
+        menu = gtk.Menu()
+        menu.set_title(_('Source Menu'))
+        for stock_id,callback,sensitivity in entries:
+            item = gtk.ImageMenuItem(stock_id)
+            if callback:
+                item.connect("activate",callback)
+            item.set_sensitive(sensitivity)
+            item.show()
+            menu.append(item)
+        menu.popup(None,None,None,0,0)
 
     def on_add_clicked(self,obj):
         EditSource.EditSource(RelLib.Source(),self.db,self.topWindow,self.new_after_edit)
